<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/UpMenu"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/Home" />
    </group>
    <group
        android:id="@+id/MiddleMenu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/my_items"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/my_items" />

        <item
            android:id="@+id/chats"
            android:icon="@drawable/chat_drawer"
            android:title="@string/Chat" />
    </group>

    <group
        android:id="@+id/downMenu"
        android:checkableBehavior="single">

        <item
            android:id="@+id/category"
            android:icon="@drawable/category"
            android:title="@string/categories" />


        <item
            app:actionLayout="@layout/menu_counter"
            android:id="@+id/alert"
            android:icon="@drawable/alerts"
            android:title="@string/alert_title" />
    </group>

    <group
        android:id="@+id/AlertMenu"
        android:checkableBehavior="single">

        <item
            android:id="@+id/create_card"
            android:icon="@drawable/ic_attach_money_black"
            android:title="Payments" />
    </group>
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_manage"-->
    <!--android:title="@string/Language_Selection" />-->


    <!--<item-->
    <!--android:id="@+id/help"-->
    <!--android:icon="@drawable/help_center"-->
    <!--android:title="@string/help_center" />-->
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_power_settings_new_black"
        android:title="@string/logout" />


    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>