<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relmain"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.infiny.ezrent.ui.facebooklogin.FacebookLoginActivity"
    tools:showIn="@layout/activity_facebook_login"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:id="@+id/ivbtnCancel"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="15dp"
            android:background="@color/colortransparent" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_app_logo" />

        <TextView
            android:id="@+id/tvTagLine"
            android:layout_below="@+id/ivLogo"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/tag_line_text"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/llQuickConnect"
            android:layout_below="@+id/tvTagLine"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/com_facebook_button_background_color_pressed"
                android:text="______ "
                android:gravity="top"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/tvQuickConnect"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/connect_quick_text"
                android:textSize="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/com_facebook_button_background_color_pressed"
                android:text=" ______ "
                android:gravity="top"
                android:textSize="15dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/llQuickConnect"
            android:id="@+id/rel"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnFBLoginReplica"
                android:background="@color/com_facebook_button_background_color_pressed"
                android:text="Login with Facebook"
                android:textAllCaps="false"
                android:textColor="@color/colorwhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible"
                android:layout_centerHorizontal="true"
                android:textSize="20dp"/>

            <com.facebook.login.widget.LoginButton
                android:layout_marginTop="10dp"
                android:id="@+id/btnFBLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"
                android:textSize="20dp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llTTCondition"
            android:visibility="visible"
            android:layout_below="@+id/rel"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="wrap_content"
                android:text="@string/facebookLogin_text1"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:textSize="15dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:background="@color/colortransparent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebookLogin_text2"
                    android:gravity="center"

                    android:textColor="@color/colorBlack"
                    android:textSize="13dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebookLogin_text3"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/tvPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_text"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="13dp"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_below="@+id/llTTCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:gravity="center_vertical"
                android:layout_height="match_parent">
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSignUp"
                    android:textAllCaps="false"
                    android:background="@color/colorLigherGreen"
                    android:textColor="@color/colorwhite"
                    android:text="@string/sign_up_text"
                    android:textSize="17dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:gravity="center_vertical"
                android:layout_height="match_parent">
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:background="@color/colorDarkGreen"
                    android:textColor="@color/colorwhite"
                    android:textAllCaps="false"
                    android:textSize="17dp"
                    android:id="@+id/btnLogin" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>