<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ececec"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.login.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/email_name"
            android:textSize="14dp" />


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorwhite"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingBottom="13dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="13dp"
            android:textAlignment="gravity"
            android:textColor="#1e1e1f"
            android:textSize="17dp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/password_name"
            android:textSize="14dp" />


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorwhite"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="13dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="13dp"
            android:textAlignment="gravity"
            android:textColor="#1e1e1f"
            android:textSize="17dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/editText"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_button"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:textStyle="normal" />

    </LinearLayout>

</RelativeLayout>
